[package]
name = "secrets-manager"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
rpassword = "7.3"
dirs = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pbkdf2 = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
